--- a/my_contracts/main/templates/register.html
+++ b/my_contracts/main/templates/register.html
@@ -3,6 +3,7 @@
 {% block title %}Register · my_contracts{% endblock %}
 
 {% block extra_styles %}
+{% load static %}
 <link rel="stylesheet" href="{% static 'main/css/auth.css' %}">
 {% endblock %}
 
